--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -209,19 +209,19 @@
              <chart:SplineSeries   Name="Series_TRetActual" LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"/>
                 <chart:SplineSeries Name="Series_THotTank" LegendIcon="Diamond" Label="THotTank"  XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"/>
                 <chart:SplineSeries Name="Series_TColdTank" LegendIcon="Diamond" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TColdTank"  ItemsSource="{Binding power}"/>
-        <!--        <chart:FastLineBitmapSeries Name="Series_THotBuffer" LegendIcon="Diamond" Label="THotBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"/>
+               <chart:FastLineBitmapSeries Name="Series_THotBuffer" LegendIcon="Diamond" Label="THotBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries Name="Series_TMidBuffer" LegendIcon="Diamond" Label="TMidBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries Name="Series_TColdBuffer" LegendIcon="Diamond" Label="TColdBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"/>
-  -->  <!--            <chart:StepLineSeries Name="Series_ValveFeedHot" LegendIcon="Circle" Label="ValveFeedHot"  XBindingPath="ElapsedTime" YBindingPath="ValveFeedHot" ItemsSource="{Binding power}"/>
+              <chart:StepLineSeries Name="Series_ValveFeedHot" LegendIcon="Circle" Label="ValveFeedHot"  XBindingPath="ElapsedTime" YBindingPath="ValveFeedHot" ItemsSource="{Binding power}"/>
                 <chart:StepLineSeries Name="Series_ValveFeedCold" LegendIcon="Circle" Label="ValveFeedCold"   XBindingPath="ElapsedTime" YBindingPath="ValveFeedCold" ItemsSource="{Binding power}"/>
                 <chart:StepLineSeries Name="Series_ValveReturn" LegendIcon="Circle" Label="ValveReturn"   XBindingPath="ElapsedTime" YBindingPath="ValveReturn" ItemsSource="{Binding power}"/>
                 <chart:StepLineSeries Name="Series_ValveCoolant" LegendIcon="Circle" Label="ValveCoolant"   XBindingPath="ElapsedTime" YBindingPath="ValveCoolant" ItemsSource="{Binding power}"/>
-  -->       <!--       <chart:FastLineBitmapSeries Name="Series_PowerHeating" LegendIcon="Diamond" Label="PowerHeating"   XBindingPath="ElapsedTime" YBindingPath="PowerHeating" ItemsSource="{Binding power}"/>
+             <chart:FastLineBitmapSeries Name="Series_PowerHeating" LegendIcon="Diamond" Label="PowerHeating"   XBindingPath="ElapsedTime" YBindingPath="PowerHeating" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries Name="Series_THeaterOilOut" LegendIcon="Diamond" Label="THeaterOilOut"  XBindingPath="ElapsedTime" YBindingPath="THeaterOilOut" ItemsSource="{Binding power}"/>
                 <chart:StepLineSeries Name="Series_TRetForecasted" LegendIcon="Diamond" Label="TRetForecasted" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries/>
                 
-    -->        </chart:SfChart>
+          </chart:SfChart>
 
             <!-- overlaying Button for Export -->
             <Button Name="ButtonExportParameterChart" Content="Export" Grid.Row="15" Grid.Column="2" Margin="30,0,0,25" Click="ButtonExportParameterChart_Click" VerticalAlignment="Bottom" HorizontalAlignment="Left"></Button>
