Nya kurvor i den nya sidan, samt flyttad funktionalitet (kan inte bygga release - blä!)

--- a/DemoPrototype/TunePage.xaml
+++ b/DemoPrototype/TunePage.xaml
@@ -12,12 +12,42 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
+
+        <!--  Delay times -->
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+            <TextBlock Margin="30,0,0,0" > Tempering delay time Feed-to-Return</TextBlock>
+        </StackPanel>
+
+        <TextBlock Margin="0,0,0,0" Grid.Row="0" Grid.Column="1"> Calibrate + Tune = Total</TextBlock>
+
+        <TextBlock VerticalAlignment="Center"  Margin="30,0,0,0" Grid.Row="0" Grid.Column="0" Text="Hot pump"></TextBlock>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left"  VerticalAlignment="Center" Margin="0,0,30,0" Grid.Row="0" Grid.Column="1">
+            <TextBlock  Name="TextBlock_HotCalibrate" VerticalAlignment="Bottom" Margin="0,0,0,0" Text="88"></TextBlock>
+            <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="+"></TextBlock>
+            <TextBox Name="HotFeedToReturnDelayCalTime" GotFocus="HotFeedToReturnDelayCalTime_GotFocus" TextChanged="HotFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True" VerticalAlignment="Bottom" Margin="10,0,0,0" Text="22"></TextBox>
+            <TextBlock  VerticalAlignment="Bottom" Margin="10,0,0,0" Text="="></TextBlock>
+            <TextBlock Name="TextBlock_SumHotDelayTime" VerticalAlignment="Bottom" Margin="5,0,0,0" Text="111"></TextBlock>
+            <TextBlock Margin="8,0,0,0" VerticalAlignment="Bottom" Text="(s)"></TextBlock>
+        </StackPanel>
+
+        <TextBlock  Margin="30,0,0,0" VerticalAlignment="Bottom" Grid.Row="0" Grid.Column="0" Text="Cold pump xxx"></TextBlock>
+        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,0,30,0" Grid.Row="0" Grid.Column="1">
+            <TextBlock Name="TextBlock_ColdCalibrate" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="0,0,0,0" Text="110"></TextBlock>
+            <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="+"></TextBlock>
+            <TextBox Name="ColdFeedToReturnDelayCalTime"  GotFocus="ColdFeedToReturnDelayCalTime_GotFocus" TextChanged="ColdFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True" Margin="10,0,0,0" VerticalAlignment="Bottom" Text="33"></TextBox>
+            <TextBlock  VerticalAlignment="Bottom" Margin="10,0,0,0" Text="="></TextBlock>
+            <TextBlock  Name="TextBlock_SumColdDelayTime" Margin="5,0,0,0" VerticalAlignment="Bottom" Text="122"></TextBlock>
+            <TextBlock Margin="8,0,0,0" VerticalAlignment="Bottom" Text="(s)"></TextBlock>
+        </StackPanel>
+
     </Grid>
 </Page>
