--- a/DemoPrototype/TunePage.xaml
+++ b/DemoPrototype/TunePage.xaml
@@ -24,10 +24,10 @@
 
         <!--  Delay times -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
-            <TextBlock Margin="30,0,0,0" > Tempering delay time Feed-to-Return</TextBlock>
+            <TextBlock Margin="30,30,0,0" > Tempering delay time Feed-to-Return</TextBlock>
         </StackPanel>
 
-        <TextBlock Margin="0,0,0,0" Grid.Row="0" Grid.Column="1"> Calibrate + Tune = Total</TextBlock>
+        <TextBlock Margin="0,30,0,0" Grid.Row="0" Grid.Column="1"> Calibrate + Tune = Total</TextBlock>
 
         <TextBlock VerticalAlignment="Center"  Margin="30,0,0,0" Grid.Row="0" Grid.Column="0" Text="Hot pump"></TextBlock>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left"  VerticalAlignment="Center" Margin="0,0,30,0" Grid.Row="0" Grid.Column="1">
@@ -39,8 +39,9 @@
             <TextBlock Margin="8,0,0,0" VerticalAlignment="Bottom" Text="(s)"></TextBlock>
         </StackPanel>
 
-        <TextBlock  Margin="30,0,0,0" VerticalAlignment="Bottom" Grid.Row="0" Grid.Column="0" Text="Cold pump xxx"></TextBlock>
-        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,0,30,0" Grid.Row="0" Grid.Column="1">
+        <TextBox Visibility="Collapsed" Name="TextBox_FocusControl"></TextBox>
+        <TextBlock  Margin="30,0,0,30" VerticalAlignment="Bottom" Grid.Row="0" Grid.Column="0" Text="Cold pump"></TextBlock>
+        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,0,30,30" Grid.Row="0" Grid.Column="1">
             <TextBlock Name="TextBlock_ColdCalibrate" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="0,0,0,0" Text="110"></TextBlock>
             <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="+"></TextBlock>
             <TextBox Name="ColdFeedToReturnDelayCalTime"  GotFocus="ColdFeedToReturnDelayCalTime_GotFocus" TextChanged="ColdFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True" Margin="10,0,0,0" VerticalAlignment="Bottom" Text="33"></TextBox>
