--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -100,6 +100,7 @@
            
 
 <!-- delay timing chart -->
+            <Border>
             <chart:SfChart
             Visibility="Collapsed"    
             Name="MyTuneChart"    
@@ -141,6 +142,7 @@
              <chart:SplineSeries EnableAnimation="True" AnimationDuration="00:00:20" Name="Series_Delay_TRetActual" LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:SplineSeries>
  <!--                  <chart:StepLineSeries Name="Series_Delay_TRetForecasted" LegendIcon="Diamond" Label="TRetForecasted" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:StepLineSeries>
      -->      </chart:SfChart>
+            </Border>
             <!-- Make a textbox overlay the grid above-->
             <TextBox Name="PhaseDiffResult" Grid.Row="2" Background="Yellow" BorderThickness="0" Grid.Column="2" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="Diff = 5"></TextBox>
 
@@ -219,13 +221,14 @@
             </StackPanel> -->
 
             <!-- state chart -->
-            <chart:SfChart  
+            <Border  BorderBrush="Gray" BorderThickness="2" CornerRadius="20" Grid.Row="0" Grid.RowSpan="8" Grid.Column="2" Grid.ColumnSpan="2">
+             <chart:SfChart  
             Header="AOU / IMM Interaction"
             Grid.Row="0"
             Grid.RowSpan="8"
             Grid.Column="2"    
             Grid.ColumnSpan="2"
-            Margin="30,10,0,0">
+            Margin="30,10,30,10">
   <!--              <chart:SfChart.Behaviors>
                     <chart:ChartTrackBallBehavior></chart:ChartTrackBallBehavior>
                 </chart:SfChart.Behaviors>
@@ -242,8 +245,10 @@
                 
             <chart:StepLineSeries XBindingPath="ElapsedTime" YBindingPath="State" ItemsSource="{Binding power}"></chart:StepLineSeries>
         </chart:SfChart>
+            </Border>
 
-             
+            <TextBlock Margin="40,-10,0,0" Grid.Column="2" Grid.Row="0">Caption</TextBlock>
+
             <!-- volume balance chart -->
             <chart:SfChart  
             Visibility="Collapsed"    
